--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   card_swiper: ^1.0.4
   shared_preferences: ^2.0.7
+  flutter_keyboard_visibility: ^5.0.3
   flutter_easyloading: ^3.0.3
   dio: ^4.0.0
   dio_cache_interceptor: ^3.0.1
@@ -37,6 +38,7 @@ dependencies:
   provider: ^6.0.0
   path_provider: ^2.0.4
   flutter_spinkit: ^5.1.0
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
