--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   shared_preferences: ^2.0.7
   flutter_keyboard_visibility: ^5.0.3
   flutter_easyloading: ^3.0.3
+  flutter_easyrefresh: ^2.2.1
+  decimal: ^1.3.0
   dio: ^4.0.0
   dio_cache_interceptor: ^3.0.1
   dio_cookie_manager: ^2.0.0
