--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "name": "demo09 (profile mode)",
             "request": "launch",
             "type": "dart",
-            // "flutterMode": "profile"
+            "flutterMode": "profile"
         }
     ]
 }
