--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  percent_indicator: ^3.4.0
+  cached_network_image: ^3.1.0
   audioplayers: ^0.20.1
   card_swiper: ^1.0.4
   shared_preferences: ^2.0.7
